# super-ultra-optimized-bedrock-chat

./: CLAUDE.md  INSTALL-GUIDE.md  LICENSE  PYPI-PUBLISHING.md  README.md  cli-py.py  init-py.py  project-structure.md  pyproject.toml  test-commands.sh  test_command.py
bedrock_chat/: __init__.py  __version__.py  cli.py
fix-scripts/: fix.sh
super_ultra_optimized_bedrock_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ultra_optimized_bedrock_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
